--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,36 @@
 beautifulsoup4==4.9.1
-Click==7.0
-cmake==3.16.3
-dash==1.13.3
-dash-core-components==1.10.1
-dash-html-components==1.0.3
-dash-renderer==1.5.0
-dash-table==4.8.1
-distlib==0.3.0
-dlib==19.19.0
-enum34==1.1.10
-face-recognition==1.2.3
-face-recognition-models==0.3.0
-filelock==3.0.12 
+dash==1.19.0
+dash-core-components==1.15.0
+dash-html-components==1.1.2
+dash-renderer==1.9.0
+dash-table==4.11.2
 Flask==1.1.2
-Flask-Compress==1.5.0
-gunicorn==19.10.0
+Flask-Compress==1.9.0
+grpcio==1.32.0
 h5py==2.10.0
-Keras==2.4.3
-Keras-Applications==1.0.8
+heroku==0.1.4
+jupyter==1.0.0
+jupyter-client==6.1.7
+jupyter-console==6.1.0
+jupyter-core==4.6.3
 Keras-Preprocessing==1.1.2
-matplotlib==1.3.1
-numpy==1.16.6
-pandas==0.24.2
-pathlib2==2.3.5
-Pillow==6.2.1
-pipenv==2018.11.26
-plotly==4.8.2
+lxml==4.6.2
+matplotlib==3.3.4
+nbconvert==5.6.1
+nbformat==5.0.7
+notebook==6.1.3
+numpy==1.19.5
+oauthlib==3.1.0
+opencv-python==4.4.0.42
+opencv-python-headless==4.4.0.42
+pickleshare==0.7.5
+Pillow==8.1.2
+plotly==4.14.3
 psutil==5.7.2
-pyOpenSSL==19.0.0
-pyparsing==2.0.1
 python-dateutil==2.8.1
-pytz==2013.7
-PyYAML==5.4.1
-requests==2.25.1
+requests==2.24.0
 requests-oauthlib==1.3.0
-scipy==1.2.2
-tensorboard==2.1.0
-tensorflow==2.1.0
-tensorflow-estimator==2.1.0
-tensorflow-gpu==1.1.0
-virtualenv==20.0.4
-virtualenv-clone==0.5.3
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
