--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
 dash==1.19.0
 dash-core-components==1.15.0
 dash-html-components==1.1.2
-dash-renderer==1.9.0
-dash-table==4.11.2
-Flask==1.1.2
-Flask-Compress==1.9.0
-h5py==2.10.0
 heroku==0.1.4
-Keras-Preprocessing==1.1.2
-matplotlib==3.3.4
-numpy==1.19.5
-pickleshare==0.7.5
+numpy==1.19.5 
 Pillow==8.1.2 
 plotly==4.14.3
-tensorflow==2.4.1
+Keras==2.4.3
+h5py==2.10.0
+python-dateutil==2.8.1
+tensorflow-cpu==2.4.1
+pandas
+gunicorn 
